objects/ssot__CareProgramProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramId__c</fullName>
        <label>Care Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramPriceAmount__c</fullName>
        <label>Care Program Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProductAvailabilityStatus__c</fullName>
        <label>Care Program Product Availability Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProductStatus__c</fullName>
        <label>Care Program Product Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666650458_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramProduct_CareProgramId_map_rel</label>
        <referenceTo>ssot__CareProgram__dlm</referenceTo>
        <relationshipLabel>CareProgramProduct_CareProgramId_map_rel</relationshipLabel>
        <relationshipName>rel_1716666650458_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1717055371327_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramProduct_ProductId_map_Pro_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>CareProgramProduct_ProductId_map_Pro_rel</relationshipLabel>
        <relationshipName>rel_1717055371327_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>